# modal-deepseek-r1-llama-70B

./: README.md  client.py  download_model.py  pyproject.toml  vllm_inference.py
