[project]
name = "modal-deepseek-r1-llama-70b"
version = "0.1.0"
description = "Deepseek R1 (LLama-70B distillation) Inference API Hosted on Modal.com"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.27.1",
    "modal>=0.71.10",
    "openai>=1.59.5",
    "python-dotenv>=1.0.1",
    "vllm>=0.6.6.post1",
]
